// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@nature-ui/checkbox Checkbox renders correctly 1`] = `
<DocumentFragment>
  <label
    class="cursor-pointer inline-flex items-center align-top relative"
  >
    <input
      style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
      type="checkbox"
      value=""
    />
    <div
      aria-hidden="true"
      class="box-border inline-flex items-center justify-center align-top select-none flex-shrink-0 text-white border-2 rounded w-4 h-4 p-0 transition-all duration-300 ease-in-out"
    />
  </label>
</DocumentFragment>
`;

exports[`@nature-ui/checkbox Checkbox renders correctly with child elements 1`] = `
<DocumentFragment>
  <label
    class="cursor-pointer inline-flex items-center align-top relative"
  >
    <input
      style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
      type="checkbox"
      value=""
    />
    <div
      aria-hidden="true"
      class="box-border inline-flex items-center justify-center align-top select-none flex-shrink-0 text-white border-2 rounded w-4 h-4 p-0 transition-all duration-300 ease-in-out"
    />
    <div
      class="select-none css-9uebpa"
    >
      This is custom checkbox
    </div>
  </label>
</DocumentFragment>
`;
